--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Sample HTML File</title>
 </head>
 <body>
-    <h1> WELCOME ARAVIND </h1> 
+    <h1>Hello, World!</h1>
+    <p>This is a sample HTML file.</p>
 </body>
 </html>
